--- a/pom.xml
+++ b/pom.xml
@@ -26,16 +26,26 @@
 	</repositories>
 
   <dependencies>
-  	<dependency>
-	    <groupId>org.postgresql</groupId>
-	    <artifactId>postgresql</artifactId>
-	    <version>42.2.12</version>
+	<dependency>
+		<groupId>org.apache.httpcomponents</groupId>
+		<artifactId>httpclient</artifactId>
+		<version>4.3.6</version>
 	</dependency>
 	<dependency>
-    <groupId>org.spigotmc</groupId>
-    <artifactId>spigot-api</artifactId>
-    <version>1.8-R0.1-SNAPSHOT</version>
-    <scope>provided</scope>
+	 	<groupId>org.apache.httpcomponents</groupId>
+		<artifactId>httpmime</artifactId>
+		<version>4.3.6</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.google.code.gson</groupId>
+	    <artifactId>gson</artifactId>
+	    <version>2.8.6</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.spigotmc</groupId>
+	    <artifactId>spigot-api</artifactId>
+	    <version>1.8-R0.1-SNAPSHOT</version>
+	    <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -48,6 +58,19 @@
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
+       <plugin>
+	      <artifactId>maven-assembly-plugin</artifactId>
+	      <configuration>
+	        <archive>
+	          <manifest>
+	            <mainClass>com.masterplugin.Main</mainClass>
+	          </manifest>
+	        </archive>
+	        <descriptorRefs>
+	          <descriptorRef>jar-with-dependencies</descriptorRef>
+	        </descriptorRefs>
+	      </configuration>
+    	</plugin>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
